--- a/sieve.yaml
+++ b/sieve.yaml
@@ -1,4 +1,4 @@
-model_version: "0.0.0.0.334"
+model_version: "0.0.1"
 build:
   gpu: true
   system_packages:
@@ -7,7 +7,8 @@ build:
   python_version: "3.8"
   python_packages:
     - "retina-face==0.0.12"
+    - "requests==2.28.1"
 predict: "predictor.py:FaceDetector"
-model_name: "face-detector"
-private: false
+model_name: "my-face-detector"
+private: true
 iteration: "video"
