--- a/sieve.yaml
+++ b/sieve.yaml
@@ -9,6 +9,6 @@ build:
     - "retina-face==0.0.12"
     - "requests==2.28.1"
 predict: "predictor.py:FaceDetector"
-model_name: "my-face-detector"
+model_name: "face-detector"
 private: true
 iteration: "video"
